tests/haste_name_reducers_defaults/haste_name_reducers_defaults.exp
Error: Module1.js:5
  5: (test: boolean);
      ^^^^ Cannot cast `test` to boolean because `Test` [1] is incompatible with boolean [2].
  References:
    5: (test: boolean);
        ^^^^ [1]: `Test`
    5: (test: boolean);
              ^^^^^^^ [2]: boolean

Error: index.js:3
  3: (require('Module1'): boolean);
      ^^^^^^^^^^^^^^^^^^ Cannot cast module `Module1` to boolean because `Test` [1] is incompatible with boolean [2].
  References:
    3: (require('Module1'): boolean);
        ^^^^^^^^^^^^^^^^^^ [1]: `Test`
    3: (require('Module1'): boolean);
                            ^^^^^^^ [2]: boolean

Error: index.js:4
  4: (require('Module2').foo(): boolean);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast call of method `foo` to boolean because `Test2` [1] is incompatible with boolean [2].
  References:
    4: (require('Module2').foo(): boolean);
        ^^^^^^^^^^^^^^^^^^^^^^^^ [1]: `Test2`
    4: (require('Module2').foo(): boolean);
                                  ^^^^^^^ [2]: boolean

Error: index.js:5
  5: require('Module3');
             ^^^^^^^^^ Module3. Required module not found


Found 4 errors
